--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dostolu/boundingbox",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,11 +14,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://syroegkin@bitbucket.org/syrop/lib-boundingbox.git"
+    "url": "git+https://github.com/dostolu/boundingbox.git"
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/syrop/lib-boundingbox#readme",
+  "homepage": "https://github.com/dostolu/boundingbox#readme",
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.1.0",
