--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
     "no-underscore-dangle": 0,
     "array-callback-return": 0,
     "no-param-reassign": 0,
-    "no-confusing-arrow": 0
+    "no-confusing-arrow": 0,
+    "arrow-parens": 0,
+    "no-bitwise": 0
   }
 }
