--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "no-param-reassign": 0,
     "no-confusing-arrow": 0,
     "arrow-parens": 0,
-    "no-bitwise": 0
+    "no-bitwise": 0,
+    "no-plusplus": 0
   }
 }
